# fcitx5-ui-rs.nvim

./: .gitignore  LICENSE  README.md  flake.nix
plugin/: Cargo.toml  default.nix
plugin/src/: lib.rs  plugin.rs  utils.rs
plugin/src/fcitx5/: candidates.rs  commands.rs  connection.rs  mod.rs
plugin/src/neovim/: autocmds.rs  commands.rs  functions.rs  keymaps.rs  mod.rs
plugin/src/plugin/: config.rs  mod.rs
